--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -438,6 +438,8 @@ nav .caret {
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
+    color: #3d3d3d;
+    background-color: #FFFFFF;
 }
 
 .mg-lg {
@@ -773,7 +775,7 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    background-color: #364577;
+    background-color: #ffffff;
 }
 
 .bgc-atomic-tangerine {
