--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -887,8 +887,9 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding:env(safe-area-inset-left, 20px);
-        padding:env(safe-area-inset-right, 20px);
+        padding: 
+        env(safe-area-inset-left)
+        env(safe-area-inset-right);
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -897,8 +898,9 @@ h4 {
     }
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding:env(safe-area-inset-left, 20px);
-        padding:env(safe-area-inset-right, 20px);
+        padding:0,20px
+        env(safe-area-inset-left)
+        env(safe-area-inset-right);
     }
 }
 
