--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -898,7 +898,7 @@ h4 {
     }
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding:0,20px
+        padding:
         env(safe-area-inset-left)
         env(safe-area-inset-right);
     }
